# infinite_roads

./: CMakeLists.txt  README.md
assets/models/: car.glb
assets/shaders/: blueprint.frag  blueprint.vert  car.frag  car.vert  color.frag  color.vert  highlight.frag  highlight.vert  probe.frag  probe.vert  road.frag
src/: camera.cpp  camera.h  game.cpp  game.h  game_config.h  interpolation_node.h  lights.h  macros.h  main.cpp  resource_manager.cpp  resource_manager.h  sampler.cpp  sampler.h  shader.cpp  shader.h  simulation.cpp  simulation.h  spline_interpolation.cpp  spline_interpolation.h  texture.cpp  texture.h
src/events/: event_dispatcher.cpp  event_dispatcher.h  events.h
src/render_nodes/: blueprint.cpp  blueprint.h  car.cpp  car.h  debug_vectors.cpp  debug_vectors.h  ground.cpp  ground.h  highlight.cpp  highlight.h  mesh.cpp  mesh.h  model.cpp  model.h  probe.cpp  probe.h  racetrack_blueprint.cpp  racetrack_blueprint.h  render_node.cpp  render_node.h  road.cpp  road.h
